--- a/BattleInfoPlugin/Views/EnemyWindow.xaml
+++ b/BattleInfoPlugin/Views/EnemyWindow.xaml
@@ -25,7 +25,7 @@
                    TextOptions.TextFormattingMode="Display"
                    AllowDrop="True"
                    Drop="Window_Drop"
-                   d:DataContext="{d:DesignInstance vm:EnemyWindowViewModel, IsDesignTimeCreatable=True}"
+                   d:DataContext="{d:DesignInstance vm:EnemyWindowViewModel}"
                    metro:ThemeHelper.HasThemeResources="True">
 
     <metro:MetroWindow.Resources>
