--- a/BattleInfoPlugin/Views/NextCellInfoView.xaml
+++ b/BattleInfoPlugin/Views/NextCellInfoView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="BattleInfoPlugin.Views.NextPointInfoView"
+﻿<UserControl x:Class="BattleInfoPlugin.Views.NextCellInfoView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -7,7 +7,7 @@
              xmlns:viewModels="clr-namespace:BattleInfoPlugin.ViewModels"
              mc:Ignorable="d"
              d:DesignHeight="20" d:DesignWidth="480"
-             d:DataContext="{d:DesignInstance viewModels:NextPointInfoViewModel}"
+             d:DataContext="{d:DesignInstance viewModels:NextCellInfoViewModel}"
              x:Name="Control">
 
     <UserControl.Resources>
