--- a/BattleInfoPlugin/Views/BattleView.xaml
+++ b/BattleInfoPlugin/Views/BattleView.xaml
@@ -56,7 +56,7 @@
                     <TextBlock Grid.Column="0"
                                Text="{Binding Name, StringFormat={}{0}:}"
                                Style="{DynamicResource AirStageStyleKey2}"
-                               HorizontalAlignment="Left" />
+                               HorizontalAlignment="Right" />
 
                     <Grid Grid.Column="1"
                           Visibility="{Binding IsHappen, Converter={StaticResource TrueToVisibleConverter}}">
@@ -291,6 +291,9 @@
                     Grid.Column="0"
                     HorizontalAlignment="Center"
                     Grid.IsSharedSizeScope="True">
+            <ItemsControl ItemsSource="{Binding FriendInjectionAirCombatResults}"
+                          ItemTemplate="{StaticResource AirCombatTemplate}" />
+
             <ItemsControl ItemsSource="{Binding FriendLandBaseAirCombatResults}"
                           ItemTemplate="{StaticResource LandBaseTemplate}"
                           Visibility="{Binding LandBaseVisibility}" />
@@ -310,6 +313,9 @@
                     Grid.Column="2"
                     HorizontalAlignment="Center"
                     Grid.IsSharedSizeScope="True">
+            <ItemsControl ItemsSource="{Binding EnemyInjectionAirCombatResults}"
+                          ItemTemplate="{StaticResource AirCombatTemplate}" />
+
             <ItemsControl ItemsSource="{Binding EnemyLandBaseAirCombatResults}"
                           ItemTemplate="{StaticResource LandBaseTemplate}"
                           Visibility="{Binding LandBaseVisibility}" />
