--- a/BattleInfoPlugin/Views/Fleet.xaml
+++ b/BattleInfoPlugin/Views/Fleet.xaml
@@ -225,8 +225,20 @@
                                 </StackPanel>
                             </TextBlock.ToolTip>
 
-                            <Run Text="{Binding Name, Mode=OneWay}"
-                                 Style="{DynamicResource EmphaticTextElementStyleKey}" />
+                            <Run Text="{Binding Name, Mode=OneWay}">
+                                <Run.Style>
+                                    <Style TargetType="{x:Type Run}"
+                                           BasedOn="{StaticResource EmphaticTextElementStyleKey}">
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding IsMVP}"
+                                                         Value="True">
+                                                <Setter Property="Foreground"
+                                                        Value="Yellow" />
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Run.Style>
+                            </Run>
                             <Run Text="{Binding AdditionalName, Mode=OneWay}"
                                  Foreground="{Binding AdditionalName, Converter={StaticResource AdditionalNameColorConverter}}" />
                             <LineBreak />
